# chencode

./: .gitignore  README.md  __init__.py  arch.sh  chencode.tar.bz2  frame.py  gitp.sh  main.py  pyproject.toml  setup.cfg  setup.py  test.py  test_main.py
chencode/: .frame.py.swp  .main.py.swp  __init__.py  __main__.py  code.txt  code2.txt  frame.py  gui.py  lts.py  main.py  test.py  test.txt
